# Synapse

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  file_manager.rs  indexer.rs  lib.rs  vault.rs
src/components/: BacklinksPanel.tsx  CommandPalette.tsx  Editor.tsx  ExportMenu.tsx  FileExplorer.tsx  FindReplace.tsx  NoteHeader.tsx  NoteList.tsx  RawMarkdown.tsx  Toast.tsx  VaultSetup.tsx  VersionHistory.tsx
src/extensions/: BlockHandle.ts  BookmarkEmbed.ts  Callout.ts  ColumnBlock.ts  Footnote.ts  InlineComment.ts  MarkdownExtraInputRules.ts  MathBlock.ts  MathInline.ts  ObsidianComment.ts  TableOfContents.ts  ToggleList.ts  WikiLink.ts
src/hooks/: useNotes.ts
src/stores/: vaultStore.ts
