[package]
name = "synapse"
version = "0.1.0"
description = "A local-first collaborative knowledge base"
authors = ["Jay Pandya"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"
notify = { version = "7.0", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
walkdir = "2.5"
serde_yaml = "0.9"
pulldown-cmark = "0.12"
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
